# Streaming_Dev

Streaming_Dev/FwUpgrade/: Makefile.am
Streaming_Dev/FwUpgrade/FwUpgrade/: Makefile.am  Readme.txt  debuglog.c  debuglog.h  fullupgrade.c  main.c  shmset.c
Streaming_Dev/FwUpgrade/aes_decrypt/: Makefile.am
Streaming_Dev/FwUpgrade/aes_decrypt/inc/: aes.h  decrypt.h
Streaming_Dev/FwUpgrade/aes_decrypt/src/: aes_cryptodev.c  decrypt.c  main.c
Streaming_Dev/FwUpgrade/aes_decrypt2/: Makefile.am
Streaming_Dev/FwUpgrade/aes_decrypt2/src/: aes.c  main.c
Streaming_Dev/FwUpgrade/aes_enc_dec_full/: Makefile.am  aes.c  aes_cryptodev.h  encrypt.c  encrypt.h  main.c  secret_code.c
Streaming_Dev/FwUpgrade/aes_encrypt/: encrypt.c  main.c
Streaming_Dev/FwUpgrade/aes_encrypt2/: encrypt.h  main.c
Streaming_Dev/FwUpgrade/ota_old/: Makefile.am
Streaming_Dev/FwUpgrade/ota_old/inc/: fwupgrade_extra_function.h  ota.h
Streaming_Dev/FwUpgrade/ota_old/src/: download.c  main.c  ota.c
Streaming_Dev/FwUpgrade/server_ota/: Makefile.am
Streaming_Dev/FwUpgrade/server_ota/inc/: download.h  ota.h
Streaming_Dev/FwUpgrade/server_ota/src/: download.c  main.c  ota.c
Streaming_Dev/FwUpgrade/sig_check/: Makefile.am  mypublic.h  sig_SHA512_check.c  sig_check.c
Streaming_Dev/FwUpgrade/upgradenotification/: Makefile.am
Streaming_Dev/FwUpgrade/upgradenotification/src/: main.c
Streaming_Dev/hubblization/: main.c
Streaming_Dev/hubblization/callback_api/: authencation_callback.c  extra_time.c  melody_callback.c  network_callback.c  pantil_motor_callback.c  speaker_callback.c  system_callback.c  talkback_callback.c  temperature_callback.c  video_callback.c
